############################################################################
# Copyright (c) 2018-2021 by the Cabana authors                            #
# All rights reserved.                                                     #
#                                                                          #
# This file is part of the Cabana library. Cabana is distributed under a   #
# BSD 3-clause license. For the licensing terms see the LICENSE file in    #
# the top-level directory.                                                 #
#                                                                          #
# SPDX-License-Identifier: BSD-3-Clause                                    #
############################################################################

add_subdirectory(01_types)
add_subdirectory(02_global_mesh)
add_subdirectory(03_partitioner)
add_subdirectory(04_global_grid)
add_subdirectory(05_index_space)
add_subdirectory(06_local_grid)
add_subdirectory(07_local_mesh)
add_subdirectory(08_array)
