add_executable(Direct directsum_example.cpp)
target_link_libraries(Direct cabanacore)
add_executable(Ewald ewaldsum_example.cpp)
target_link_libraries(Ewald cabanacore)

if(Cabana_ENABLE_Cuda)
  find_package(CUDA REQUIRED)
  add_executable(SPME spme_example.cpp)
  target_link_libraries(SPME cabanacore ${CUDA_CUFFT_LIBRARIES})
else()
  find_package(FFTW3)
  if(FFTW3_FOUND)
    add_executable(SPME spme_example.cpp)
    target_link_libraries(SPME cabanacore FFTW3::FFTW3)
  else()
    message(WARNING "FFTW not found and Cuda not enabled - Not building SPME executable")
  endif()
endif()
