find_package(FFTW3)
if(FFTW3_FOUND)
  if(Cabana_ENABLE_Cuda)
    add_definitions(-DCUDA_ENABLE)
  endif()
  if(Cabana_ENABLE_OpenMP)
    add_definitions(-DOMP_ENABLE)
  endif()
  if(Cabana_ENABLE_Serial)
    add_definitions(-DSerial_ENABLE)
  endif()
  add_executable(SPME particles.cpp direct.cpp ewald.cpp pme.cpp main.cpp)
  target_link_libraries(SPME cabanacore ${FFTW3_LIBRARIES})
endif()
