if(Cabana_ENABLE_Cuda)
  add_definitions(-DCUDA_ENABLE)
  find_package(CUDA REQUIRED)
  if(CUDA_FOUND)
    add_executable(SPME spme_example.cpp)
    target_link_libraries(SPME cabanacore ${CUDA_CUFFT_LIBRARIES})
  endif()
elseif()
  find_package(FFTW3)
  if(FFTW3_FOUND)
    add_executable(SPME spme_example.cpp)
    target_link_libraries(SPME cabanacore ${FFTW3_LIBRARIES})
  endif()
endif()

if(Cabana_ENABLE_OpenMP)
  add_definitions(-DOMP_ENABLE)
endif()
if(Cabana_ENABLE_Pthread)
  add_definitions(-DPthread_ENABLE)
endif()
if(Cabana_ENABLE_Serial)
  add_definitions(-DSerial_ENABLE)
endif()


add_executable(Direct directsum_example.cpp)
target_link_libraries(Direct cabanacore)
add_executable(Ewald ewaldsum_example.cpp)
target_link_libraries(Ewald cabanacore)
