add_subdirectory(01_hello_world)
add_subdirectory(02_tuple)
add_subdirectory(03_struct_of_arrays)

if(Cabana_ENABLE_Serial)
  add_subdirectory(04_aosoa)
  add_subdirectory(05_slice)
  add_subdirectory(07_sorting)
  add_subdirectory(08_linked_cell_list)
  add_subdirectory(09_verlet_list)
  if(Cabana_ENABLE_Cuda)
    add_subdirectory(06_deep_copy)
  endif()
  if(Cabana_ENABLE_MPI)
    add_subdirectory(12_migration)
    add_subdirectory(13_halo_exchange)
  endif()
endif()

if(Cabana_ENABLE_OpenMP)
  add_subdirectory(10_advanced_slice_openmp)
  add_subdirectory(11_parallel_for)
endif()

if(Cabana_ENABLE_Cuda)
  add_subdirectory(10_advanced_slice_cuda)
endif()

add_subdirectory(14_unmanaged_view)
