add_subdirectory(01_hello_world)
add_subdirectory(02_tuple)
add_subdirectory(03_struct_of_arrays)

if(Kokkos_ENABLE_SERIAL)
  add_subdirectory(04_aosoa)
  add_subdirectory(05_slice)
  add_subdirectory(07_sorting)
  add_subdirectory(08_linked_cell_list)
  if(NOT Kokkos_ENABLE_HIP) # FIXME_HIP
    add_subdirectory(09_verlet_list)
  endif()
  if(Kokkos_ENABLE_CUDA)
    add_subdirectory(06_deep_copy)
  endif()
  if(Cabana_ENABLE_MPI)
    add_subdirectory(12_migration)
    add_subdirectory(13_halo_exchange)
  endif()
endif()

if(Kokkos_ENABLE_OPENMP)
  add_subdirectory(10_advanced_slice_openmp)
  add_subdirectory(11_parallel_for)
endif()

if(Kokkos_ENABLE_CUDA)
  add_subdirectory(10_advanced_slice_cuda)
endif()

add_subdirectory(14_unmanaged_view)
