if(Cabana_ENABLE_MPI)
  find_package(MPI COMPONENTS Fortran)
  add_subdirectory(01_parallel_for)
  add_subdirectory(02_push)
  add_subdirectory(03_scatter)
  add_subdirectory(04_unmanaged_aosoa)
  add_subdirectory(Fortran_features)
else()
  message("\nThe advanced fortran examples needs -D Cabana_ENABLE_MPI=ON\n")
  return()
endif()
